--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "resolveJsonModule": true,
         "forceConsistentCasingInFileNames": true,
         "removeComments": true,
+        "allowJs": true,
         "typeRoots": [
             "node_modules/@types"
         ],
@@ -25,7 +26,7 @@
     ],
     "include": [
         "./**/*.ts"
-    ],
+, "src/commands/slash/claim.js"    ],
     "exclude": [
         "**/node_modules",
         "dist"
